--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "vue": "^2.5.17",
+    "vue-i18n": "^8.1.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-i18n": "^1.10.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
