--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "vue": "^2.5.17",
     "vue-i18n": "^8.1.0",
+    "vue-input-tag": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-i18n": "^1.10.5"
