--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-loader": "^8.0.4",
+    "eslint-config-standard": "^12.0.0",
     "vue": "^2.5.17",
-    "vue-i18n": "^8.1.0",
+    "vue-i18n": "^8.0.0",
     "vue-input-tag": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
@@ -22,6 +24,7 @@
     "@vue/eslint-config-standard": "^3.0.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vue-cli-plugin-i18n": "^0.5.1",
     "vue-template-compiler": "^2.5.17"
   }
 }
