--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "eslint-config-standard": "^12.0.0",
     "vue": "^2.5.17",
-    "vue-i18n": "^8.0.0",
+    "vue-i18n": "^8.2.1",
     "vue-input-tag": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
@@ -19,17 +20,18 @@
   },
   "devDependencies": {
     "@babel/core": "=7.0.0-beta.47",
-    "@vue/cli-plugin-babel": "^3.0.4",
-    "@vue/cli-plugin-eslint": "^3.0.4",
-    "@vue/cli-service": "^3.0.4",
+    "@vue/cli-plugin-babel": "^3.0.5",
+    "@vue/cli-plugin-eslint": "^3.0.5",
+    "@vue/cli-service": "^3.0.5",
     "@vue/devtools": "^4.1.5",
-    "@vue/eslint-config-standard": "^3.0.4",
-    "eslint": "^5.6.1",
+    "@vue/eslint-config-standard": "^3.0.5",
+    "eslint": "^5.7.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
-    "node-sass": "^4.9.0",
+    "js-cookie": "^2.2.0",
+    "node-sass": "^4.9.4",
     "sass-loader": "^7.0.1",
     "vue-cli-plugin-i18n": "^0.5.1",
     "vue-template-compiler": "^2.5.17"
