--- a/package.json
+++ b/package.json
@@ -9,31 +9,33 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-loader": "^8.0.4",
     "eslint-config-standard": "^12.0.0",
-    "vue": "^2.5.17",
-    "vue-i18n": "^8.2.1",
-    "vue-input-tag": "^1.0.6",
-    "vue-router": "^3.0.1",
+    "vue": "^2.5.18",
+    "vue-i18n": "^8.4.0",
+    "vue-input-tag": "^2.0.1",
+    "vue-router": "^3.0.2",
     "vuex": "^3.0.1",
     "vuex-i18n": "^1.10.5"
   },
   "devDependencies": {
-    "@babel/core": "=7.0.0-beta.47",
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@vue/cli-plugin-babel": "^3.2.0",
+    "@vue/cli-plugin-eslint": "^3.2.1",
+    "@vue/cli-service": "^3.2.0",
     "@vue/devtools": "^4.1.5",
-    "@vue/eslint-config-standard": "^3.0.5",
-    "eslint": "^5.7.0",
-    "eslint-plugin-node": "^7.0.1",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "babel-loader": "^8.0.4",
+    "eslint": "^5.10.0",
+    "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.0.0-beta.3",
+    "eslint-plugin-vue": "^5.0.0",
     "js-cookie": "^2.2.0",
-    "node-sass": "^4.9.4",
-    "sass-loader": "^7.0.1",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "vue-cli-plugin-i18n": "^0.5.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.18",
+    "webpack": "^4.27.1"
   }
 }
