--- a/package.json
+++ b/package.json
@@ -10,32 +10,39 @@
   "dependencies": {
     "axios": "^0.18.0",
     "eslint-config-standard": "^12.0.0",
-    "vue": "^2.5.18",
-    "vue-i18n": "^8.4.0",
-    "vue-input-tag": "^2.0.1",
-    "vue-router": "^3.0.2",
-    "vuex": "^3.0.1",
-    "vuex-i18n": "^1.10.5"
+    "roboto-fontface": "*",
+    "vue": "^2.6.10",
+    "vue-i18n": "^8.11.2",
+    "vue-input-tag": "^2.0.6",
+    "vue-router": "^3.0.6",
+    "vuetify": "^1.5.5",
+    "vuex": "^3.1.1",
+    "vuex-i18n": "^1.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-eslint": "^3.2.1",
-    "@vue/cli-service": "^3.2.0",
-    "@vue/devtools": "^4.1.5",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@mdi/font": "^2.8.94",
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-eslint": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
+    "@vue/devtools": "^5.1.0",
     "@vue/eslint-config-standard": "^4.0.0",
-    "babel-loader": "^8.0.4",
-    "eslint": "^5.10.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
+    "babel-loader": "^8.0.5",
+    "eslint": "^5.16.0",
+    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^5.2.2",
     "js-cookie": "^2.2.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
-    "vue-cli-plugin-i18n": "^0.5.1",
-    "vue-template-compiler": "^2.5.18",
-    "webpack": "^4.27.1"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-i18n": "^0.6.0",
+    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.0.5",
+    "webpack": "^4.31.0"
   }
 }
